[gd_scene load_steps=4 format=3 uid="uid://c2kv243oo23d0"]

[ext_resource type="Script" path="res://Tienda.gd" id="1_y67o5"]
[ext_resource type="Texture2D" uid="uid://bee52e6tma1hq" path="res://icon.svg" id="2_3qndl"]
[ext_resource type="Texture2D" uid="uid://dxbk32jeqmonc" path="res://tienda.png" id="3_45uco"]

[node name="Tienda" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y67o5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_45uco")

[node name="Sprite2D" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 79.0
offset_top = 292.0
offset_right = 207.0
offset_bottom = 420.0
texture_normal = ExtResource("2_3qndl")

[node name="Sprite2D5" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 351.0
offset_top = 319.0
offset_right = 479.0
offset_bottom = 447.0
texture_normal = ExtResource("2_3qndl")

[node name="Sprite2D6" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 608.0
offset_top = 333.0
offset_right = 736.0
offset_bottom = 461.0
texture_normal = ExtResource("2_3qndl")

[node name="Sprite2D7" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 867.0
offset_top = 334.0
offset_right = 995.0
offset_bottom = 462.0
texture_normal = ExtResource("2_3qndl")

[node name="Sprite2D8" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 64.0
offset_top = 568.0
offset_right = 192.0
offset_bottom = 696.0
texture_normal = ExtResource("2_3qndl")

[node name="Sprite2D2" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 339.0
offset_top = 559.0
offset_right = 467.0
offset_bottom = 687.0
texture_normal = ExtResource("2_3qndl")

[node name="Sprite2D3" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 596.0
offset_top = 568.0
offset_right = 724.0
offset_bottom = 696.0
texture_normal = ExtResource("2_3qndl")

[node name="Sprite2D4" type="TextureButton" parent="TextureRect"]
layout_mode = 2
offset_left = 873.0
offset_top = 570.0
offset_right = 1001.0
offset_bottom = 698.0
texture_normal = ExtResource("2_3qndl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1338, 431)
scale = Vector2(3.8378, 4.36468)
texture = ExtResource("2_3qndl")

[node name="Button" type="Button" parent="."]
offset_left = 1153.0
offset_top = 571.0
offset_right = 1529.0
offset_bottom = 676.0
theme_override_font_sizes/font_size = 71
text = "Insert Text"

[node name="Sprite2D9" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = -12.0
offset_right = 132.0
offset_bottom = 116.0
texture_normal = ExtResource("2_3qndl")

[connection signal="pressed" from="TextureRect/Sprite2D" to="." method="_on_sprite_2d_pressed"]
[connection signal="pressed" from="TextureRect/Sprite2D5" to="." method="_on_sprite_2d_5_pressed"]
[connection signal="pressed" from="TextureRect/Sprite2D6" to="." method="_on_sprite_2d_6_pressed"]
[connection signal="pressed" from="TextureRect/Sprite2D7" to="." method="_on_sprite_2d_7_pressed"]
[connection signal="pressed" from="TextureRect/Sprite2D8" to="." method="_on_sprite_2d_8_pressed"]
[connection signal="pressed" from="TextureRect/Sprite2D2" to="." method="_on_sprite_2d_2_pressed"]
[connection signal="pressed" from="TextureRect/Sprite2D3" to="." method="_on_sprite_2d_3_pressed"]
[connection signal="pressed" from="TextureRect/Sprite2D4" to="." method="_on_sprite_2d_4_pressed"]
[connection signal="pressed" from="Sprite2D9" to="." method="_on_sprite_2d_9_pressed"]
